# repo-env

./: .codespellignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  issues.md  mkdocs.yml  mypy.ini  noxfile.py  pylintrc  pyproject.toml  ruff.toml  vulture_whitelist.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml  pr.yml  release.yml
docs/: api-reference.md  changelog.md  index.md
docs/contributor-guide/: commit-convention.md  dev-setup.md  quality-gates.md  release-process.md
docs/user-guide/: commands.md  concepts.md  configuration.md  installation.md  multi-branch.md  quickstart.md  troubleshooting.md  workflow-example.md
latest/: 404.html  index.html  sitemap.xml
latest/api-reference/: index.html
latest/changelog/: index.html
latest/contributor-guide/commit-convention/: index.html
latest/contributor-guide/dev-setup/: index.html
latest/contributor-guide/quality-gates/: index.html
latest/contributor-guide/release-process/: index.html
latest/search/: search_index.json
latest/user-guide/commands/: index.html
latest/user-guide/concepts/: index.html
latest/user-guide/configuration/: index.html
latest/user-guide/installation/: index.html
latest/user-guide/quickstart/: index.html
latest/user-guide/troubleshooting/: index.html
latest/user-guide/workflow-example/: index.html
pr-preview/pr-12/: 404.html  index.html  sitemap.xml
pr-preview/pr-12/api-reference/: index.html
pr-preview/pr-12/changelog/: index.html
pr-preview/pr-12/contributor-guide/commit-convention/: index.html
pr-preview/pr-12/contributor-guide/dev-setup/: index.html
pr-preview/pr-12/contributor-guide/quality-gates/: index.html
pr-preview/pr-12/contributor-guide/release-process/: index.html
pr-preview/pr-12/search/: search_index.json
pr-preview/pr-12/user-guide/commands/: index.html
pr-preview/pr-12/user-guide/concepts/: index.html
pr-preview/pr-12/user-guide/configuration/: index.html
pr-preview/pr-12/user-guide/installation/: index.html
pr-preview/pr-12/user-guide/multi-branch/: index.html
pr-preview/pr-12/user-guide/quickstart/: index.html
pr-preview/pr-12/user-guide/troubleshooting/: index.html
pr-preview/pr-12/user-guide/workflow-example/: index.html
pr-preview/pr-14/: index.html  sitemap.xml
pr-preview/pr-14/api-reference/: index.html
pr-preview/pr-14/changelog/: index.html
pr-preview/pr-14/contributor-guide/commit-convention/: index.html
pr-preview/pr-14/contributor-guide/release-process/: index.html
pr-preview/pr-14/search/: search_index.json
pr-preview/pr-15/: 404.html  objects.inv
pr-preview/pr-15/api-reference/: index.html
pr-preview/pr-15/changelog/: index.html
pr-preview/pr-15/search/: search_index.json
src/repoenv/: __init__.py  __main__.py  _version.py  errors.py  typing_compat.py
src/repoenv/adapters/: __init__.py  atomic.py  config_store.py  gh_adapter.py  git_adapter.py  paths.py  shell_adapter.py  state_store.py
src/repoenv/cli/: __init__.py  app.py  completion_helpers.py  didyoumean.py  passthrough.py  resolve.py
src/repoenv/cli/commands/: ls.py  (+22 more)
src/repoenv/domain/: __init__.py  models.py  owner_repo.py  repo_url.py  selection.py  summary.py
src/repoenv/services/: __init__.py  clone_service.py  environment_service.py  lifecycle_service.py  pr_service.py  runner.py
src/repoenv/ui/: __init__.py  console.py
tests/: conftest.py
tests/fixtures/: sample_config.yaml
tests/integration/: conftest.py  test_testenv_layout.py
tests/integration/cli/: test_add_merge_flow.py  test_issues_fixes.py  test_multibranch_flow.py  test_path_contract.py
tests/integration/git/: test_create_command_git_flow.py  test_new_command_git_flow.py  test_repair.py  test_worktree_conflicts.py
tests/integration/pr/: test_pr_dry_run.py
tests/integration/support/: gitfixtures.py  renv_helpers.py
tests/integration/workflows/: test_power_user_workflow.py
tests/performance/: conftest.py  test_cold_start_budget.py  test_completion_budget.py
tests/unit/adapters/: test_atomic.py  test_config_store.py  test_gh_adapter.py  test_git_adapter.py  test_git_adapter_linked_worktree.py  test_state_store.py
tests/unit/cli/: test_cli.py  test_cli_add_merge.py  test_cli_lifecycle.py  test_clone_command.py  test_completion_helpers.py  test_didyoumean.py  test_entrypoint.py  test_resolve.py  test_run_command.py
tests/unit/domain/: test_models.py  test_owner_repo.py  test_repo_url.py  test_selection.py  test_selection_new.py  test_summary.py
tests/unit/services/: test_clone_service.py  test_environment_service_add_merge.py  test_environment_service_issues.py  test_environment_service_multibranch.py  test_lifecycle_service.py  test_pr_service.py  test_runner.py
(+13 files in other folders)
