[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "repo-env"
dynamic = ["version"]
description = "Build and operate isolated git-worktree environments across many repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ditschi" }]
keywords = ["git", "worktree", "monorepo", "multi-repo", "cli", "migration"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "pydantic>=2.7; python_version < '3.14'",
    "pydantic>=2.14.0a1; python_version >= '3.14'",
    "ruamel.yaml>=0.18",
    "platformdirs>=4.2",
    "filelock>=3.14",
]

[project.urls]
Homepage = "https://github.com/ditschi/repo-env"
Source = "https://github.com/ditschi/repo-env"

[project.scripts]
renv = "repoenv.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
]
lint = [
    "ruff>=0.5",
    "black>=24.4",
    "flake8>=7.1",
    "isort>=5.13",
]
type-check = [
    "mypy>=1.10",
]
code-quality = [
    "fawltydeps>=0.16",
    "vulture>=2.11",
    "pylint>=3.2",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.7.5,<10",
    "mkdocstrings[python]>=0.25",
    "mike>=2.1",
    "mkdocs-snippets>=1.0",
]
dev = [
    "nox>=2024.4",
    "commitizen>=3.29",
    "repo-env[test,lint,type-check,code-quality,docs]",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/repoenv/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/repoenv"]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 110

[tool.vulture]
min_confidence = 80
paths = ["src/repoenv", "vulture_whitelist.py"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "scm"
changelog_file = "CHANGELOG.md"
changelog_incremental = true
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests using real temp git repos / mocked gh (deselect with -m 'not integration')",
    "int: alias for integration (deselect with -m 'not int')",
    "performance: CLI cold-start latency budget checks (help and bash completion)",
]
